fixing pmd problems